# aaltitoad

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion---question.md  feature_request.md
.github/resources/: forward-reachability-search.txt  tick dependency solutions.txt  tick-solution.txt
.github/workflows/: cmake.yml
.run/: ntta tests.run.xml
cmake/: CPM.cmake  VER.cmake
src/: aaltitoadpch.h  config.h.in  main.cpp  mavepch.h  overload  warnings.cpp  warnings.h
src/cli/: CLIConfig.cpp  CLIConfig.h  cli_common.h  cli_options.h  main.cpp
src/cli/detcheck/: CMakeLists.txt  cli_options.h  main.cpp
src/debug/: aaltitoad_debug.h  mave_debug.h
src/expr-wrappers/: ctl-interpreter.h  interpreter.cpp  interpreter.h  parameterized-ast-factory.cpp  parameterized-ast-factory.h  parameterized-expr-evaluator.cpp  parameterized-expr-evaluator.h
src/extensions/: cparse_extensions.h  dep_graph.h  dfs.h  function_layer.h  graph.h  graph_algorithms  hash_combine  map_extensions.h  not_implemented_yet_exception.h  overload  random.cpp  string_extensions.cpp  string_extensions.h  stringextensions.cpp  stringextensions.h  tarjan.h  tree_extensions.cpp  tree_extensions.h
src/json_parsing/: JSONParser.cpp  JSONParser.h
src/man/: tta.7
src/model_parsers/: ModelParser.h  TTAParser.cpp  TTAParser.h  TTATypes.cpp  TTATypes.h
src/ntta/: async_tocker.h  interesting_tocker.cpp  interesting_tocker.h  ntta_builder.cpp  ntta_builder.h  ntta_state_json.h  tta.cpp  tta.h
src/parser/: CMakeLists.txt  h-uppaal-parser.cpp  h-uppaal-parser.h  huppaal_parser.cpp  huppaal_parser.h
src/parser/gehawk/: gehawk_parser.cpp  gehawk_parser.h  model.cpp  model.h
src/parser/hawk/: hawk_parser.cpp  hawk_parser.h
src/parser/hawk/scoped_template_builder/: model.cpp  model.h  scoped_interpreter.cpp  scoped_interpreter.h  scoped_template_builder.cpp  scoped_template_builder.h
src/parser/scoped_template_builder/: model.cpp  model.h  scoped_template_builder.cpp  scoped_template_builder.h
src/parser_plugins/: CMakeLists.txt  h-uppaal-parser.cpp  h-uppaal-parser.h
src/plugin_system/: plugin_system.cpp  plugin_system.h  tocker_plugin_system.cpp  tocker_plugin_system.h
src/plugins/: CMakeLists.txt  h-uppaal-parser.cpp  hawk-parser.cpp  hawk-parser.h  pipe_tocker.cpp
src/plugins/parsers/: h-uppaal-parser.cpp  h-uppaal-parser.h  hawk-parser.cpp  hawk-parser.h
src/plugins/parsers/hawk-syntax-layers/: hawk-layers.h
src/plugins/tockers/: pipe_tocker.cpp  pipe_tocker.h
src/runtime/: SymbolChange.h  TTA.cpp  TTA.h  TTASymbol.h  UpdateExpression.cpp  UpdateExpression.h  VariablePredicate.cpp  VariablePredicate.h  component.cpp  component.h  edge.cpp  edge.h  location.h  ntta.cpp  ntta.h  state.h  tocker.cpp  tocker.h  tta.cpp  tta.h
src/tocker-plugins/: pipe_tocker.cpp
src/tocker_plugins/: CMakeLists.txt  pipe_tocker.cpp  pipe_tocker.h
src/tockers/: pipe_tocker.cpp  pipe_tocker.h  tockers.cpp  tockers.h
src/util/: random.cpp  random.h  string_extensions.cpp  string_extensions.h  tarjan.h  warnings.cpp  warnings.h
src/verification/: CMakeLists.txt  ctl.cpp  ctl.h  ctl_sat.cpp  demo.cpp  forward_reachability.cpp  forward_reachability.h  pick_strategy.h  traceable_multimap.h
src/verification/ctl/: ctl_sat.cpp  ctl_sat.h
src/verification/grammar/: ctl.l  ctl.y
src/verifier/: ReachabilitySearcher.cpp  ReachabilitySearcher.h  StateList.h  TTASuccessorGenerator.cpp  (+1 more)
test/: CMakeLists.txt
test/algorithms/: dfs_tests.cpp  tarjan_tests.cpp
test/ntta/: ntta_tests.cpp
test/tta/: tocker_tests.cpp  tta_tests.cpp
test/verification/: forward_reachability_tests.cpp  parser_tests.cpp  run-tests.sh
test/verification/failing-suite/bad-declarations/: Main.json  Parameterized(id, key).json
test/verification/failing-suite/bad-duplicated-locations/: Parameterized(id, key).json
test/verification/failing-suite/bad-hawk-project/: NotAComponent.json
test/verification/failing-suite/bad-invocation-args/: Main.json  Parameterized(id, key).json
test/verification/failing-suite/bad-invocation-args-amount/: Main.json
test/verification/failing-suite/bad-recursive-instantiation/: ComponentA.json  ComponentB.json  Main.json
test/verification/failing-suite/bad-template-name/: Main.json  Parameterized(id, key).json
test/verification/failing-suite/bad-template-params/: Main.json  Parameterized(id, id).json
test/verification/fischer-10/: Main.json  Main€FischerAð1đ.json  Main€FischerDð4đ.json  Main€FischerEð5đ.json  Main€FischerFð6đ.json  Main€FischerGð7đ.json  Main€FischerHð8đ.json  Main€FischerIð9đ.json  Main€FischerJð10đ.json  Queries.json
test/verification/fischer-2/: Main.json  Main€FischerAð1đ.json  Main€FischerBð2đ.json  Queries.json  expected_results.ignore.txt  expected_results.txt
test/verification/fischer-5/: Main.json  Main€FischerAð1đ.json  Main€FischerBð2đ.json  Main€FischerCð3đ.json  Main€FischerDð4đ.json  expected_results.ignore.txt  specific.parts
test/verification/fischer-suite/fischer-10/: Fischer(id).json  Main.json  Main€FischerGð7đ.json  Main€FischerHð8đ.json  Main€FischerIð9đ.json  Main€FischerJð10đ.json
test/verification/fischer-suite/fischer-2/: Main€FischerBð2đ.json  expected_results.ignore.txt
test/verification/fischer-suite/fischer-3/: Main.json  Main€FischerCð3đ.json  expected_results.ignore.txt
test/verification/fischer-suite/fischer-4/: Main.json  Queries.json
test/verification/fischer-suite/fischer-5/: Main.json
test/verification/fischer-suite/fischer-6/: Main.json  Main€FischerEð5đ.json  specific.parts
test/verification/fischer-suite/fischer-7/: Main.json  Queries.json  variables.parts
test/verification/fischer-suite/fischer-8/: Main.json
test/verification/fischer-suite/fischer-9/: Main.json  Main€FischerBð2đ.json  Main€FischerFð6đ.json
test/verification/fischer-suite/fischer-n/: Main.json
test/verification/hawk/hawk/: ExampleTemplate(foo, bar).json  Main.json  Queries.json
tocker_plugins/: CMakeLists.txt  pipe_tocker.cpp  pipe_tocker.h
trash/: component.cpp  edge.cpp
(+71 files in other folders)
